@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 20:53:30 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 20:55:55 +0800</lastBuildDate>
 
   <item>
   <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
@@ -130,5 +130,13 @@ NCT成員中本悠太發表個人歌曲</description>
 藝妓是許多人嚮往的傳統日本文化體驗。雖然京都是最著名的藝妓表演地，但東京也有許多機會讓你見到藝妓。</description>
   <category>Others</category>
   <pubDate>Fri, 11 Oct 2024 20:53:30 +0800</pubDate>
+</item><item>
+  <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
+  <link>https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html</link>
+  <description>BLACKPINK成員Jennie即將推出新單曲《Mantra》，能否打破近期韓國女歌手的低迷走勢？
+BLACKPINK成員Jennie即將於10月11日推出她的新單曲《Mantra》，這是她自一年前推出《You &amp; Me》以來的首次發行。近期，許多韓國女歌手的單曲表現不佳，令人懷疑像Jennie這樣成功的偶像能否打破目前的低迷走勢。
+最近，幾位韓國女歌手，如Chungha、Somi和Sunmi，無法在國內和國際市場複製過往的榜單成功。例如，Chungha以《Roller Coaster》和《Gotta Go》等歌曲而聞名，但她的近期作品影響力較小。雖然3月份發行的《Eenie Meenie》引起了一些關注，在Gaon數位單曲榜上排名第56位，但8月份發行的《Algorithm》未能在全球範圍內產生影響。</description>
+  <category>K-Pop</category>
+  <pubDate>Fri, 11 Oct 2024 20:55:55 +0800</pubDate>
 </item></channel>
 </rss>
