@@ -14,3 +14,4 @@ https://www.koreaherald.com/view.php?ud=20241008050607
 https://tokyocheapo.com/living/moving-to-japan-hacks/
 https://www.koreaherald.com/view.php?ud=20241004050494
 https://www.koreaherald.com/view.php?ud=20241008050665
+https://tokyocheapo.com/entertainment/japanese-culture-and-tradition/where-to-see-geisha-in-tokyo/
